tests/issues-OLD/test289.expected
Error: syntax error, parens needed around operator ':-', line 2
